# xdna-driver

./: CMakeLists.txt
src/: CMakeLists.txt
src/driver/: CMakeLists.txt
src/include/uapi/drm_local/: amdxdna_accel.h
src/shim/: CMakeLists.txt
